Made changes to styles mostly. Fixed calendar not being able to accommodate large events. Added gap between event elements and clip excess text. Fixed issue with scrollbars constantly visible, now only visible when in use To do- add in forward and backward views on the calendar, move form to overlay, further streamline the style, then move on to alternative views

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-/* 9/26/23 rolled back to earlier draft */
+/* styles.css */
 
-* {
+.event {
   box-sizing: border-box;
 }
 
@@ -48,11 +48,21 @@ h1 {
 
 .cell-wrapper {
   width: 100%;
-  height: 100px;  /* Make this the same as .calendar td height */
-  position: relative;
-  overflow-y: auto;
+  height: 100px;
+  position: inherit;
+  overflow-y: hidden;
   overflow-x: hidden;
+  flex-wrap: nowrap;
+  justify-content: center;
+  display: grid;
+  align-content: space-between;
+  grid-row-gap: 18px;
+  justify-items: center;
+  align-items: center;
+  scrollbar-gutter:both-edges;
+  overflow:auto
 }
+
 
 .day {
   position: sticky;  /* Make it sticky */
@@ -62,23 +72,27 @@ h1 {
 }
 
 .event {
-  position: relative;
-  top: 25px;
+  position:relative;  /* Changed */
+  display: -webkit-inline-box;
+  top: 10px;  /* Positioned for centering */
   font-size: 12px;
   color: white;
-  padding: 5px;
   border-radius: 5px;
-  white-space: nowrap;
-  max-width: 100%;
-  max-height: 100px;  /* Make this the same as .calendar td height */
-  overflow: hidden;
-  text-overflow: ellipsis;
+  max-height: 60px;  /* Changed */
+  text-align: center;
+  padding: 4px;
+  overflow: hidden;   /* Hide overflow content */
+  text-overflow: ellipsis;  /* Indicate cut-off text with '...' */
+  white-space: nowrap;  /* Text in a single line */
+  max-width: 70%;  /* Set the max-width */
+  box-sizing: border-box; /* To account for padding and border */
+  justify-content: center;
 }
 
 .calendar td {
   border: 1px solid #ccc;
-  text-align: left;
-  width: 100px;
+  width: 75px;
+  max-width: 75px;
   height: 100px;  /* This height will be the default size of the day cell */
   position: relative;
 }
